@@ -7,6 +7,8 @@ The package vtTables has been renamed accordingly to PEP 8.
 
 The package nodeProperties has been renamed accordingly to PEP 8.
 
+The package docBrowser has been renamed accordingly to PEP 8.
+
 ** September 20, 2013 **
 data presentation of EArray has been debugged and simplified.
 
